update platforms.cfg for solarus and moved solarus from ports to emulators

--- a/platforms.cfg
+++ b/platforms.cfg
@@ -280,7 +280,7 @@ samcoupe_fullname="SAM Coupe"
 satellaview_exts=".7z .bin .bs .fig .mgd .sfc .smc .swc .zip"
 satellaview_fullname="Satellaview"
 
-saturn_exts=".cue"
+saturn_exts=".cue .chd .zip"
 saturn_fullname="Sega Saturn"
 
 sc-3000_exts=".7z .bin .sms .zip"
@@ -306,6 +306,9 @@ sgb_fullname="Super Game Boy"
 
 snes_exts=".7z .bin .bs .fig .mgd .sfc .smc .swc .zip"
 snes_fullname="Super Nintendo"
+
+solarus_exts=".solarus .zip"
+solarus_fullname="Solarus Engine"
 
 sufami_exts=".7z .bin .bs .fig .mgd .sfc .smc .swc .zip"
 sufami_fullname="Sufami Turbo"
