add thomson MO/TO

--- a/platforms.cfg
+++ b/platforms.cfg
@@ -337,6 +337,9 @@ tg16_fullname="TurboGrafx-16"
 tg-cd_exts=".7z .ccd .chd .cue .pce .zip"
 tg-cd_fullname="TurboGrafx-16 CD"
 
+thomson_exts=".fd .sap .k7 .m7 .m5 .rom"
+thomson_fullname="Thomson MO/TO Series"
+
 ti99_exts=".cf7 .ctg .dsk"
 ti99_fullname="TI99"
 
