emulator path and extension updates

--- a/platforms.cfg
+++ b/platforms.cfg
@@ -13,6 +13,9 @@ amiga_fullname="Commodore Amiga"
 amigacd32_exts=".adf .adz .cue .dms .ipf .lha .sh .uae .zip"
 amigacd32_fullname="Commodore Amiga CD32"
 
+amigacdtv_exts=".adf .adz .cue .dms .ipf .lha .sh .uae .zip"
+amigacdtv_fullname="Commodore CDTV"
+
 amstradcpc_exts=".cdt .cpc .dsk .zip"
 amstradcpc_fullname="Amstrad CPC"
 
@@ -51,6 +54,9 @@ atarilynx_fullname="Atari Lynx"
 
 atarist_exts=".st .stx .img .rom .raw .ipf .ctr"
 atarist_fullname="Atari ST"
+
+atarixegs_exts=".atr .atr.gz .atx .bas .bin .car .cas .com .dcm .rom .xex .xfd .xfd.gz"
+atari800_fullname="Atari XEGS"
 
 atomiswave_exts=".zip"
 atomiswave_fullname="Atomiswave"
@@ -151,6 +157,9 @@ kodi_fullname="Kodi Home Theater"
 
 love_exts=".love"
 love_fullname="Love"
+
+macplus_exts=".dsk .txt"
+maciplus_fullname="Mac Plus"
 
 macintosh_exts=".dsk .txt"
 macintosh_fullname="Apple Macintosh"
@@ -274,6 +283,9 @@ psx_fullname="PlayStation"
 ql_exts=".qlpak .zip"
 ql_fullname="Sinclair QL"
 
+residualvm_exts=".sh .rvm"
+residualvm_fullname="ResidualVM"
+
 samcoupe_exts=".dsk .mgt .sad .sbt"
 samcoupe_fullname="SAM Coupe"
 
@@ -343,8 +355,14 @@ thomson_fullname="Thomson MO/TO Series"
 ti99_exts=".cf7 .ctg .dsk"
 ti99_fullname="TI99"
 
-trs-80_exts=".dsk"
-trs-80_fullname="trs-80"
+trs-80-1_exts=".dsk"
+trs-80-1_fullname="TRS-80 Model I"
+
+trs-80-3_exts=".dsk"
+trs-80-3_fullname="TRS-80 Model III"
+
+trs-80-4_exts=".dsk"
+trs-80-4_fullname="TRS-80 Model 4"
 
 vectrex_exts=".7z .bin .gam .vec .zip"
 vectrex_fullname="Vectrex"
