--- a/platforms.cfg
+++ b/platforms.cfg
@@ -296,6 +296,9 @@ ngpc_fullname="Neo Geo Pocket Color"
 np2pi_exts=".2hd .88d .98d .d88 .d98 .dup .fdi .hdd .hdi .hdm .nhd .tfd .thd .xdf"
 np2pi_fullname="NEC PC-9801"
 
+odyssey2_exts=".7z .bin .zip"
+odyssey2_fullname="Odyssey 2"
+
 openbor_exts=".pak"
 openbor_fullname="OpenBOR"
 
