correct rom folder names

--- a/platforms.cfg
+++ b/platforms.cfg
@@ -1,11 +1,11 @@
 3do_exts=".cue .chd .iso"
 3do_fullname="3DO Interactive Multiplayer"
 
-86rkm_exts=".wav .rk .rkr .gam .g16 .pki .bin .rom"
-86rkm_fullname="Radio-86RK Mikrosha"
+radio86_exts=".wav .rk .rkr .gam .g16 .pki .bin .rom"
+radio86_fullname="Radio-86RK Mikrosha"
 
-abk01_exts=".zip,.wav.rka"
-abk01_fullname="Apogee BK-01"
+apogee_exts=".zip,.wav.rka"
+apogee_fullname="Apogee BK-01"
 
 adam_exts=".rom .col .zip .bin"
 adam_fullname="Coleco ADAM"
@@ -31,8 +31,8 @@ amigacdtv_fullname="Commodore CDTV"
 amstradcpc_exts=".cdt .cpc .dsk .zip"
 amstradcpc_fullname="Amstrad CPC"
 
-apf_exts=".bin .wav .cas .cpf .apt"
-apf_fullname="APF Imagination Machine"
+apfimag_exts=".bin .wav .cas .cpf .apt"
+apfimag_fullname="APF Imagination Machine"
 
 apple2_exts=".dsk .nib .po"
 apple2_fullname="Apple II"
@@ -91,8 +91,8 @@ atomiswave_fullname="Atomiswave"
 bbcmicro_exts=".ssd .zip"
 bbcmicro_fullname="BBC Micro"
 
-bsv8000_exts=".bin .zip"
-bsv8000_fullname="Bandai Super Vision 8000"
+sv8000_exts=".bin .zip"
+sv8000_fullname="Bandai Super Vision 8000"
 
 c64_exts=".crt .d64 .g64 .prg .t64 .tap .x64 .zip .vsf"
 c64_fullname="Commodore 64"
@@ -106,8 +106,8 @@ cdimono1_fullname="Philips CD-i"
 channelf_exts=".7z .bin .rom .zip"
 channelf_fullname="Fairchild ChannelF"
 
-clynx_exts=".tap .zip"
-clynx_fullname="Camputers Lynx"
+lynx128k_exts=".tap .zip"
+lynx128k_fullname="Camputers Lynx"
 
 coco_exts=".cas .wav .bas .asc .dmk .jvc .os9 .dsk .vdk .rom .ccc .sna"
 coco_fullname="TRS-80 Color Computer"
@@ -117,8 +117,8 @@ coleco_fullname="ColecoVision"
 coleco_theme="colecovision"
 coleco_platform="colecovision"
 
-colorgenie_exts=".wav .cas .bin .rom .cgd .fdi .td0 .imd .cqm .dsk .d77 .d88 .1dd"
-colorgenie_fullname="EACA EG2000 Colour Genie"
+cgenie_exts=".wav .cas .bin .rom .cgd .fdi .td0 .imd .cqm .dsk .d77 .d88 .1dd"
+cgenie_fullname="EACA EG2000 Colour Genie"
 
 crvision_exts=".rom .zip"
 crvision_fullname="CreatiVision"
@@ -138,8 +138,8 @@ easyrpgplayer_fullname="Easy RPG Player"
 electron_exts=".uef .zip"
 electron_fullname="Acorn Electron"
 
-epochgpc_exts=".bin .zip"
-epochgpc_fullname="Epoch Game Pocket Computer"
+gamepock_exts=".bin .zip"
+gamepock_fullname="Epoch Game Pocket Computer"
 
 exl100_exts=".bin .rom .zip"
 exl100_fullname="Exelvision EXL 100"
@@ -191,11 +191,11 @@ genesis_fullname="Sega Genesis"
 gp32_exts=".zip .bin .smc"
 gp32_fullname="GamePark 32"
 
-hgmaster_exts=".bin .zip"
-hgmaster_fullname="Hartung Game Master"
+gmaster_exts=".bin .zip"
+gmaster_fullname="Hartung Game Master"
 
-hrx_exts=".wav .k7 .cin .for .hmd .fdi .td0 .imd .cqm .dsk .d77 .d88 .1dd .zip"
-hrx_fullname="Hector HRX"
+hec2hrx_exts=".wav .k7 .cin .for .hmd .fdi .td0 .imd .cqm .dsk .d77 .d88 .1dd .zip"
+hec2hrx_fullname="Hector HRX"
 
 intellivision_exts=".7z .bin .int .itv .rom .zip"
 intellivision_fullname="Intellivision"
@@ -209,8 +209,8 @@ jupiter-ace_fullname="Jupiter ACE"
 kodi_exts=".sh"
 kodi_fullname="Kodi Home Theater"
 
-loopy_exts=".zip .bin .ic1"
-loopy_fullname="Casio Loopy"
+casloopy_exts=".zip .bin .ic1"
+casloopy_fullname="Casio Loopy"
 
 love_exts=".love"
 love_fullname="Love"
@@ -251,8 +251,8 @@ megadrive-japan_fullname="Sega Mega Drive Japan"
 megaduck_exts=".bin .zip"
 megaduck_fullname="MegaDuck/CougarBoy"
 
-microvision_exts=".bin .zip"
-microvision_fullname="Milton Bradley Microvision"
+microvsn_exts=".bin .zip"
+microvsn_fullname="Milton Bradley Microvision"
 
 msx_exts=".col .dsk .m3u .mx1 .mx2 .rom .zip"
 msx_fullname="MSX"
@@ -305,8 +305,8 @@ openbor_fullname="OpenBOR"
 oric_exts=".dsk .tap"
 oric_fullname="Oric 1"
 
-pc01_exts=".sav .wav .lvt .lvr .lv1 .lv2 .lv3 .zip"
-pc01_fullname="Lviv PC-01"
+lviv_exts=".sav .wav .lvt .lvr .lv1 .lv2 .lv3 .zip"
+lviv_fullname="Lviv PC-01"
 
 pc88_exts=".d88 .cmt .t88"
 pc88_fullname="NEC PC-8801"
@@ -345,8 +345,8 @@ pokemini_fullname="Pokemon Mini"
 pocketcdg_exts=".cdg"
 pocketcdg_fullname="Pocket-CDG"
 
-pocketstation_exts=".gme .zip"
-pocketstation_fullname="Sony PocketStation"
+pockstat_exts=".gme .zip"
+pockstat_fullname="Sony PocketStation"
 
 ports_exts=".sh"
 ports_fullname="Ports"
@@ -419,8 +419,8 @@ solarus_fullname="Solarus Engine"
 sorcerer_exts=".snp .bin .wav .tape .rom .dsk .fdi .td0 .imd .cqm .d77 .d88 .1dd"
 sorcerer_fullname="Exidy Sorcerer"
 
-sordm5_exts=".wav .cas .zip .bin"
-sordm5_fullname="Sord M5"
+m5_exts=".wav .cas .zip .bin"
+m5_fullname="Sord M5"
 
 spectravideo_exts=".wav .cas .bin .rom .dsk .fdi .td0 .imd .cqm .d77 .d88 .1dd"
 spectravideo_fullname="Spectravideo"
@@ -437,8 +437,8 @@ sfc_fullname="Super Famicom"
 studio2_exts=".bin .zip"
 studio2_fullname="RCA Studio 2"
 
-superacan_exts=".bin .zip"
-superacan_fullname="Funtech Super A'Can"
+supracan_exts=".bin .zip"
+supracan_fullname="Funtech Super A'Can"
 
 supergrafx_exts=".7z .ccd .chd .cue .pce .zip"
 supergrafx_fullname="PC Engine SuperGrafx"
@@ -467,11 +467,11 @@ trs-80-3_fullname="TRS-80 Model III"
 trs-80-4_exts=".dsk"
 trs-80-4_fullname="TRS-80 Model 4"
 
-ttutor_exts=".wav .bin .zip"
-ttutor_fullname="Tomy Tutor"
+tutor_exts=".wav .bin .zip"
+tutor_fullname="Tomy Tutor"
 
-v06c_exts=".wav .fdd .fdi .td0 .imd .cqm .dsk .d77 .d88 .1dd .bin .emr"
-v06c_fullname="Vector-06C"
+vector06_exts=".wav .fdd .fdi .td0 .imd .cqm .dsk .d77 .d88 .1dd .bin .emr"
+vector06_fullname="Vector-06C"
 
 vc4000_exts=".pgm .tvc .bin .rom .zip"
 vc4000_fullname="Interton VC 4000"
@@ -479,8 +479,8 @@ vc4000_fullname="Interton VC 4000"
 vectrex_exts=".7z .bin .gam .vec .zip"
 vectrex_fullname="Vectrex"
 
-vg5000_exts=".wav .k7"
-vg5000_fullname="Philips VG 5000"
+vg5k_exts=".wav .k7"
+vg5k_fullname="Philips VG 5000"
 
 vic20_exts=".crt .prg .tap .zip"
 vic20_fullname="Commodore VIC-20"
@@ -491,8 +491,8 @@ videopac_fullname="Videopac"
 virtualboy_exts=".7z .vb .zip"
 virtualboy_fullname="Virtual Boy"
 
-vmu_exts=".vms .bin .zip"
-vmu_fullname="Sega VMU"
+svmu_exts=".vms .bin .zip"
+svmu_fullname="Sega VMU"
 
 wii_exts=".ciso .gcm .gcz .iso .wbfs"
 wii_fullname="Nintendo Wii"
