--- a/platforms.cfg
+++ b/platforms.cfg
@@ -28,8 +28,11 @@ amigacd32_fullname="Commodore Amiga CD32"
 amigacdtv_exts=".adf .adz .cue .dms .ipf .lha .sh .uae .zip"
 amigacdtv_fullname="Commodore CDTV"
 
-amstradcpc_exts=".cdt .cpc .dsk .zip"
+amstradcpc_exts=".cdt .cpc .dsk .zip .m3u"
 amstradcpc_fullname="Amstrad CPC"
+
+amstradgx4000_exts=".cdt .cpc .dsk .zip .m3u"
+amstradgx4000_fullname="Amstrad GX4000"
 
 apfimag_exts=".bin .wav .cas .cpf .apt"
 apfimag_fullname="APF Imagination Machine"
@@ -164,6 +167,9 @@ fm7_fullname="Fujitsu FM-7 Series"
 fmtowns_exts=".cue .chd .toc .nrg .gdi .iso .cdr .zip"
 fmtowns_fullname="Fujitsu FM Towns"
 
+gamate_exts=".bin .zip"
+gamate_fullname="Gamate"
+
 gameandwatch_exts=".mgw"
 gameandwatch_fullname="Game and Watch"
 
@@ -241,6 +247,9 @@ markiii_fullname="Sega Mark III"
 
 mastersystem_exts=".7z .bin .sms .zip"
 mastersystem_fullname="Sega Master System"
+
+mc10_exts=".wav .cas .zip"
+mc10_fullname="Tandy MC-10"
 
 megadrive_exts=".7z .bin .gen .md .sg .smd .zip"
 megadrive_fullname="Sega Mega Drive"
